# owlat

./: .dockerignore  .editorconfig  .env.example  .env.selfhost.example  .gitattributes  .gitignore  .gitleaks.toml  .semgrep.yml  .semgrepignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  Caddyfile.example  LICENSE  NOTICE  README.md  SECURITY.md  bunfig.toml  docker-compose.yml  install.sh  knip.jsonc  oxfmtrc.json  oxlintrc.json  package.json  plugins.config.ts  tsconfig.base.json  turbo.json  vitest.timeouts.ts
.changeset/: README.md  config.json
.claude/workflows/: nodemailer-removal-prs.js  own-the-mail-prs.js  sealed-mail-prs.js
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  docker-images.json  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: _desktop-build.yml  _server-build.yml  dependabot-lockfile.yml  desktop-ci.yml  desktop-release.yml  e2e.yml  release.yml  security.yml  server-release.yml  test.yml
apps/api/: package.json  vitest.config.ts  vitest.setup.ts
apps/api/convex/: CONVENTIONS.md  README.md  accountDeletionEmail.ts  agentConfigMutations.ts  agentHealth.ts  aiProviderConfig.ts  aiProviderConfigActions.ts  auditLogs.ts  auth.config.ts  autonomy.ts  autonomyFeedback.ts  autonomyOutcome.ts  autonomySuggestions.ts  backups.ts  blockedEmails.ts  codeWorkTasks.ts  confirmationEmail.ts  confirmationEmailQueries.ts  convex.config.ts  crons.ts  env.d.ts  eventsApi.ts  globalSearch.ts  http.ts  mediaAssets.ts  mtaWebhook.ts  providerRoutes.ts  publicRateLimit.ts  quickQuery.ts  quickQueryGate.ts  rateLimiter.ts  resendWebhook.ts  schema.ts  seedAdmin.ts  segments.ts  semanticFileProcessing.ts  semanticFiles.ts  sesWebhook.ts  shareLinkHttp.ts  shareLinkQueries.ts  (+9 more)
apps/api/scripts/: boolean-naming-baseline.txt  check-body-access.sh  check-boolean-naming.sh  check-codegen.sh  check-contact-scope.sh  check-convex-patterns.sh  check-env-docs.sh  check-env.sh  check-errors.sh  check-graph-scope.sh  check-identity-mutations.sh  check-listing.sh  check-mailbox-ownership.sh  check-permissions.sh  check-public-functions.sh  check-query-authz.sh  migrate_domain.py  (+3 more)
apps/code-worker/: Dockerfile  package.json  tsconfig.json  vitest.config.ts
apps/desktop/: README.md  package.json  tsconfig.json
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.release.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: files.rs  main.rs  menu.rs  notifications.rs  secrets.rs  shortcuts.rs  ssh.rs  tray.rs  window.rs
apps/docs/: Dockerfile  content.config.ts  nuxt.config.ts  package.json  vitest.config.ts  wrangler.jsonc
apps/imap/: Dockerfile  package.json
apps/mail-sync/: Dockerfile  package.json  tsconfig.json  vitest.config.ts
apps/marketing/: Dockerfile  nuxt.config.ts  package.json  vitest.config.ts  wrangler.jsonc
apps/mta/: .env.example  Dockerfile  docker-compose.yml  package.json  vitest.config.ts  vitest.setup.ts
apps/setup-cli/: Dockerfile  package.json  tsconfig.json  vitest.config.ts
apps/updater/: Dockerfile  package.json  tsconfig.json  vitest.config.ts
apps/web/: Dockerfile  nuxt.config.ts  package.json  tsconfig.json  vitest.config.ts  wrangler.jsonc
docker/: convex-deploy.Dockerfile
docs/: abstractions.md
docs/adr/: 0001-block-module-deepening.md  0002-catalog-modules.md  0003-webhook-event-modules.md  0004-automation-modules.md  0005-channel-inbound-adapters.md  0006-send-completion-module.md  0007-mta-dispatch-modules.md  0008-contact-resolution-module.md  0009-doi-lifecycle-module.md  0010-inbox-processing-lifecycle-module.md  0011-abuse-status-modules.md  0012-postbox-outbound-lifecycle-module.md  0013-topic-subscription-module.md  0014-agent-step-module.md  0015-form-submission-module.md  0016-imap-command-modules.md  0017-campaign-lifecycle-modules.md  0018-sending-domain-lifecycle-modules.md  0019-contact-import-module.md  0020-send-provider-adapter-modules.md  0021-transactional-send-intake-module.md  0022-template-lifecycle-modules.md  0023-saved-block-module.md  0024-automation-lifecycle-module.md  0025-organization-deletion-module-family.md  0026-organization-settings-modules.md  0027-integration-import-provider-adapter-modules.md  0028-mail-draft-lifecycle-module.md  0029-llm-dispatch-module.md  0030-public-token-endpoint-module.md  0031-send-composition-modules.md  0032-conversation-thread-module.md  0033-audience-resolution-module.md  0034-segment-matching-module.md  0035-email-editor-bridge-module.md  0036-operation-error-taxonomy.md  0037-resource-listing-engine.md  0038-contact-creation-module.md  0039-authorization-enforcement.md  0040-shared-inbox-admin-only.md  (+13 more)
docs/design/: desktop-settings-plan.html  progressive-disclosure.md
examples/conformance/: README.md  package.json  tsconfig.json  vitest.config.ts
fixtures/deliverability-lab/: README.md  seed-test-payload.json
fixtures/sealed-mail/: README.md  tls-report-sample.json
infra/templates/: .env.vps.template  acme-entrypoint.sh  docker-compose.vps.yml
patches/: nodemailer@9.0.3.patch
scripts/: backup.sh  check-adr-numbers.sh  check-branding.sh  check-build-graph.ts  check-convex-plugin-orphans.ts  check-cross-package-imports.sh  check-dead-code.sh  check-docker-workspaces.sh  check-file-size.sh  check-format.sh  check-security-audit.ts  ci-select-affected.sh  dead-code-baseline.txt  dev-seed.ts  file-size-baseline.txt  gen-release-compose.sh  owlat  release.ts  restore.sh  sealed-mail-qa.md  setup.sh
scripts/__tests__/: check-format.test.ts  check-security-audit.test.ts
(+3271 files in other folders)
